doc/logfile.txt
Project documentation
<---- javadoc command: ---->
C:\Program Files\Greenfoot\jdk\bin\javadoc.exe
-sourcepath
F:\Greenfoot\Local Scenarios\bee-movement-v3
-source
11
-classpath
C:\Program Files\Greenfoot\lib\extensions\greenfoot.jar;C:\Program Files\Greenfoot\lib\bluejcore.jar;C:\Program Files\Greenfoot\lib\bluejeditor.jar;C:\Program Files\Greenfoot\lib\bluejext.jar;C:\Program Files\Greenfoot\lib\junit-4.11.jar;C:\Program Files\Greenfoot\lib\hamcrest-core-1.3.jar;C:\Program Files\Greenfoot\lib\bluej.jar;C:\Program Files\Greenfoot\lib\classgraph-4.2.6.jar;C:\Program Files\Greenfoot\lib\diffutils-1.2.1.jar;C:\Program Files\Greenfoot\lib\commons-logging-api-1.1.2.jar;C:\Program Files\Greenfoot\lib\jl1.0.1.jar;C:\Program Files\Greenfoot\lib\opencsv-2.3.jar;C:\Program Files\Greenfoot\lib\xom-1.2.9.jar;C:\Program Files\Greenfoot\lib\lang-stride.jar;C:\Program Files\Greenfoot\lib\nsmenufx-2.1.4.jar;C:\Program Files\Greenfoot\lib\richtextfx-fat-0.9.0.jar;C:\Program Files\Greenfoot\lib\guava-17.0.jar;C:\Program Files\Greenfoot\lib\httpclient-4.1.1.jar;C:\Program Files\Greenfoot\lib\httpcore-4.1.jar;C:\Program Files\Greenfoot\lib\httpmime-4.1.1.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.base.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.controls.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.media.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.properties.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.swing.jar;C:\Program Files\Greenfoot\lib\javafx\lib\javafx.web.jar;F:\Greenfoot\Local Scenarios\bee-movement-v3
-d
F:\Greenfoot\Local Scenarios\bee-movement-v3\doc
-encoding
UTF-8
-charset
UTF-8
-doctitle
bee-movement-v3
-windowtitle
bee-movement-v3
-author
-version
-nodeprecated
-protected
-Xdoclint:none
-link
https://docs.oracle.com/en/java/javase/11/docs/api/
F:\Greenfoot\Local Scenarios\bee-movement-v3/Flower.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/bee.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/Flower2.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/BeeWin.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/PoisonIvy.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/Flower1.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/Flower3.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/Lemon.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/Lemur.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/Cactus.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/PoisonMushroom.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/MyWorld.java
F:\Greenfoot\Local Scenarios\bee-movement-v3/LemurWin.java
<---- end of javadoc command ---->
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\Flower.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\bee.java...
F:\Greenfoot\Local Scenarios\bee-movement-v3\bee.java:56: error: illegal start of expression
        if(score <= 15 || score >= -15 && );
                                          ^
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\Flower2.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\BeeWin.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\PoisonIvy.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\Flower1.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\Flower3.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\Lemon.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\Lemur.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\Cactus.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\PoisonMushroom.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\MyWorld.java...
Loading source file F:\Greenfoot\Local Scenarios\bee-movement-v3\LemurWin.java...
1 error
